--- a/src/app/add-recipe/add-recipe.component.html
+++ b/src/app/add-recipe/add-recipe.component.html
@@ -13,9 +13,9 @@
                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-3">
                     <label for="" class="label-control">Category</label>
                     <select name="" id="" class="form-control" name="category" [(ngModel)]="category">
-                        <option value="">Veg</option>
-                        <option value="">Non Veg</option>
-                        <option value="">Egg</option>
+                        <option value="Veg">Veg</option>
+                        <option value="Non Veg">Non Veg</option>
+                        <option value="Egg">Egg</option>
                     </select>
                </div>
                <div class="col col-12 col-sm-6 col-md-4 col-lg-4 col-xl-3 col-xxl-3">
